objects/ssot__JobPositionPayGrade__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Job Position Pay Grade Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobPositionId__c</fullName>
        <label>Job Position</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PositionPayGradeId__c</fullName>
        <label>Position Pay Grade</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366664917_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPositionPayGrade_JobPositionId_ma_rel</label>
        <referenceTo>ssot__JobPosition__dlm</referenceTo>
        <relationshipLabel>JobPositionPayGrade_JobPositionId_ma_rel</relationshipLabel>
        <relationshipName>rel_1727366664917_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727409957091_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobPositionPayGrade_PositionPayGrade_rel</label>
        <referenceTo>ssot__PositionPayGrade__dlm</referenceTo>
        <relationshipLabel>JobPositionPayGrade_PositionPayGrade_rel</relationshipLabel>
        <relationshipName>rel_1727409957091_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>